修改二维码
修改二维码

--- a/dpwch/index.html
+++ b/dpwch/index.html
@@ -59,7 +59,10 @@
         </section>
         <section id="third" class="third page animated fadeIn hide">
             <div class="share pos-abs"></div>
-            <img class="qrcode pos-abs" src="images/qrcode.png" width="94.5">
+            <div class="qrcode-wrap pos-abs">
+                <div class="qrtext"></div>
+                <img class="qrcode" src="images/qrcode.png" width="95">
+            </div>
             <a class="btn-seat pos-abs" href="http://fun.yy.com/dpwch"></a>
             <div class="concluding-remarks pos-abs"></div>
         </section>
