修改微信分享文案
修改微信分享文案

--- a/dpwch/index.html
+++ b/dpwch/index.html
@@ -34,24 +34,24 @@
             <div class="title pos-abs animated fadeInDown"></div>
             <div id="posture_wrap" class="posture-wrap pos-abs">
                 <div id="posture_1" class="posture posture-1 animated fadeIn hide">
-                    <div class="posture-title pos-abs animated slideInDown" title="给我唱歌"></div>
-                    <div class="posture-desc pos-abs animated bounceInRight" title="让致列欧巴现场给我唱首专属情歌，"></div>
+                    <div class="posture-title pos-abs animated slideInDown"></div>
+                    <div class="posture-desc pos-abs animated bounceInRight"></div>
                 </div>
                 <div id="posture_2" class="posture posture-2 animated fadeOut hide">
-                    <div class="posture-title pos-abs animated" title="脱脱脱！"></div>
-                    <div class="posture-desc pos-abs animated" title="脱脱脱！让致列欧巴现场脱衣服露胸肌，"></div>
+                    <div class="posture-title pos-abs animated"></div>
+                    <div class="posture-desc pos-abs animated"></div>
                 </div>
                 <div id="posture_3" class="posture posture-3 animated fadeOut hide">
-                    <div class="posture-title pos-abs animated" title="叫我起床"></div>
-                    <div class="posture-desc pos-abs animated" title="叫我起床！让欧巴给我录一段温柔的起床铃声，"></div>
+                    <div class="posture-title pos-abs animated"></div>
+                    <div class="posture-desc pos-abs animated"></div>
                 </div>
                 <div id="posture_4" class="posture posture-4 animated fadeOut hide">
-                    <div class="posture-title pos-abs animated" title="跟我告白"></div>
-                    <div class="posture-desc pos-abs animated" title="跟我告白！我要听欧巴现场跟我电话告白！"></div>
+                    <div class="posture-title pos-abs animated"></div>
+                    <div class="posture-desc pos-abs animated"></div>
                 </div>
                 <div id="posture_5" class="posture posture-5 animated fadeOut hide">
-                    <div class="posture-title pos-abs animated" title="亲亲十连拍"></div>
-                    <div class="posture-desc pos-abs animated" title="亲亲十连拍！现场录下来，每天看十遍！"></div>
+                    <div class="posture-title pos-abs animated"></div>
+                    <div class="posture-desc pos-abs animated"></div>
                 </div>
                 <div id="btn_like" class="btn-like pos-abs"></div>
             </div>
@@ -76,8 +76,8 @@
     <script>
         // 分享参数
         var SHARE_OBJ = {
-            title: 'YY直播黄致列大牌玩唱会',
-            desc: '黄致列大牌玩唱会，快来YY直播吧~',
+            title: '调戏黄致列，你说了算！',
+            desc: '撩韩国欧巴黄致列，是一种什么样的体验？快来YY直播吧',
             link: location.href,
             imgUrl: 'http://fun.yy.com/html/publish/s/hd/dpwch/images/thumbnail.png',
             success: function () { }
