--- a/examples/dpwch-cg/index.html
+++ b/examples/dpwch-cg/index.html
@@ -7,81 +7,76 @@
     <meta name="author" content="erictian">
     <meta name="description" content="Grace欲跟曹格上YY，寂寞先生给你好看">
     <title>Grace欲跟曹格上YY，寂寞先生给你好看</title>
-    <style>@-webkit-keyframes arrow{0%,30%{opacity:.2;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:.2;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}@keyframes arrow{0%,30%{opacity:.2;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:.2;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}*{box-sizing:border-box;outline:0}body,html{margin:0;padding:0;width:100%;height:100%;font-size:62.5%;text-align:center}.container{position:absolute;top:0;left:0;right:0;bottom:0;overflow:hidden}.page-wrap{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.page-wrap:after{display:block;content:' ';height:0;clear:both}.page-wrap.anim{transition:all 500ms ease-out 0s}.page{position:relative;display:block;overflow:hidden}.page .arrow{position:absolute;left:50%;bottom:30px;margin-left:-17px;margin-top:-34px;width:19px;height:12px;background:url(images/arrow.png) no-repeat 50% 100%;background-size:auto 100%!important;-webkit-animation:arrow 1.5s infinite ease-in-out;animation:arrow 1.5s infinite ease-in-out}.first,.second{background-size:100%!important}.first{background:url(images/bg_1.jpg) 50% 100%}.second{background:url(images/bg_2.jpg) 50% 100%}.third{background:url(images/bg_3.jpg) 50% 100%}.fifth,.fourth,.third{background-size:100%!important}.fourth{background:url(images/bg_4.jpg) 50% 100%}.fifth{background:url(images/bg_5.jpg) 50% 100%}.fifth .lnk-advance{position:absolute;top:38%;left:10%;display:block;width:80px;height:97px;background:url(images/advance.png) no-repeat 50% 100%;background-size:auto 100%!important}</style>
+    <style>@-webkit-keyframes arrow{0%,30%{opacity:.2;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:.2;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}@keyframes arrow{0%,30%{opacity:.2;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:.2;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}@-webkit-keyframes fadeInDown{0%{opacity:0;-webkit-transform:translate3d(0,-50%,0);transform:translate3d(0,-50%,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInDown{0%{opacity:0;-webkit-transform:translate3d(0,-50%,0);transform:translate3d(0,-50%,0)}to{opacity:1;-webkit-transform:none;transform:none}}*{box-sizing:border-box;outline:0}body,html{margin:0;padding:0;width:100%;height:100%;font-size:62.5%;text-align:center}.animated{-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}.fadeInDown{-webkit-animation-name:fadeInDown;animation-name:fadeInDown}.container{position:absolute;top:0;left:0;right:0;bottom:0;overflow:hidden}.page-wrap{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.page-wrap:after{display:block;content:' ';height:0;clear:both}.page-wrap.anim{transition:all 500ms ease-out 0s}.page,.page .title{background-repeat:no-repeat;background-position:50% 100%;background-size:auto 100%}.page{position:relative;display:block;overflow:hidden}.page.cur .title{opacity:1}.page .title{margin-top:5%;opacity:0}.page .arrow{position:absolute;left:50%;bottom:30px;margin-left:-10px;margin-top:-34px;width:19px;height:12px;background:url(images/arrow.png) no-repeat 50% 100%;background-size:auto 100%!important;-webkit-animation:arrow 1.5s infinite ease-in-out;animation:arrow 1.5s infinite ease-in-out}.first{background-image:url(images/bg_1.jpg)}.first .title{height:155.5px;background-image:url(images/title_1.png)}.second{background-image:url(images/bg_2.jpg)}.second .title{height:171px;background-image:url(images/title_2.png)}.third{background-image:url(images/bg_3.jpg)}.third .title{height:179.5px;background-image:url(images/title_3.png)}.fourth{background-image:url(images/bg_4.jpg)}.fourth .title{height:132px;background-image:url(images/title_4.png)}.fifth{background-image:url(images/bg_5.jpg)}.fifth .title{height:204px;background-image:url(images/title_5.png)}.fifth .lnk-advance{position:absolute;top:34%;left:10%;display:block;width:80px;height:97px;background:url(images/advance.png) no-repeat 50% 100%;background-size:auto 100%!important}</style>
 </head>
 <body>
     <div class="container">
         <div id="page_wrap" class="page-wrap">
             <section class="page first">
+                <div class="title animated fadeInDown"></div>
                 <div class="arrow"></div>
             </section>
             <section class="page second">
+                <div class="title animated"></div>
                 <div class="arrow"></div>
             </section>
             <section class="page third">
+                <div class="title animated"></div>
                 <div class="arrow"></div>
             </section>
             <section class="page fourth">
+                <div class="title animated"></div>
                 <div class="arrow"></div>
             </section>
             <section class="page fifth">
+                <div class="title animated"></div>
                 <a class="lnk-advance" href="http://fun.yy.com/html/publish/1604/325853488503.html"></a>
             </section>
         </div>
     </div>
     <script src="js/app.js"></script>
     <script src="//res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script src="http://www.ttthing.com/cgi/yy_game/ticket/?url=http://www.ttthing.com/weixin/yy_caoge/"></script>
     <script>
-        $('#page_wrap').fullpage();
+        $('#page_wrap').fullpage({
+            afterChange: function (e) {
+                var $title = $('.title');
+                $title.eq(e.prev).removeClass('fadeInDown');
+                $title.eq(e.cur).addClass('fadeInDown');
+            }
+        });
 
         // 分享参数
         var SHARE_OBJ = {
             title: 'Grace欲跟曹格上YY，寂寞先生给你好看',
             desc: '一个等待了十年的约会 5月8日 晚八点 就等你来！',
             link: location.href,
-            imgUrl: 'http://www.ttthing.com/weixin/yy_xxx/images/thumbnail.png',
-            success: function () { }
+            imgUrl: 'http://www.ttthing.com/weixin/yy_caoge/images/thumbnail.png',
+            success: function() {}
         };
 
         // 初始化分享
         function initShare() {
-            $.ajax({
-                url: 'http://www.ttthing.com/cgi/yy_game/ticket/',
-                type: 'GET',
-                data: {
-                    url: location.href
-                },
-                dataType: 'json',
-                success: function (data) {
-                    wx.config({
-                        appId: data.appId,
-                        timestamp: data.timestamp,
-                        nonceStr: data.nonceStr,
-                        signature: data.signature,
-                        jsApiList: ['onMenuShareTimeline', 'onMenuShareAppMessage', 'onMenuShareQQ', 'onMenuShareWeibo', 'onMenuShareQZone']
-                    });
-
-                    wx.ready(function () {
-
-                        // 分享到朋友圈
-                        wx.onMenuShareTimeline(SHARE_OBJ);
-
-                        // 分享给朋友
-                        wx.onMenuShareAppMessage(SHARE_OBJ);
-
-                        // 分享到QQ
-                        wx.onMenuShareQQ(SHARE_OBJ);
-
-                        // 分享到腾讯微博
-                        wx.onMenuShareWeibo(SHARE_OBJ);
-
-                        // 分享到QQ空间
-                        wx.onMenuShareQZone(SHARE_OBJ);
-                    });
-                }
+            wx.config({
+                appId: wx_conf.appId,
+                timestamp: wx_conf.timestamp,
+                nonceStr: wx_conf.nonceStr,
+                signature: wx_conf.signature,
+                jsApiList: ['onMenuShareTimeline', 'onMenuShareAppMessage', 'onMenuShareQQ', 'onMenuShareWeibo', 'onMenuShareQZone']
+            });
+            wx.ready(function() {
+                // 分享到朋友圈
+                wx.onMenuShareTimeline(SHARE_OBJ);
+                // 分享给朋友
+                wx.onMenuShareAppMessage(SHARE_OBJ);
+                // 分享到QQ
+                wx.onMenuShareQQ(SHARE_OBJ);
+                // 分享到腾讯微博
+                wx.onMenuShareWeibo(SHARE_OBJ);
+                // 分享到QQ空间
+                wx.onMenuShareQZone(SHARE_OBJ);
             });
         }
-
         initShare();
     </script>
 </body>
