--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <ul>
-        <li><a href="/examples/dpwch" target="_blank">大牌玩唱会 - 黄致列</a></li>
+        <li><a href="/examples/dpwch-hzl" target="_blank">大牌玩唱会 - 黄致列</a></li>
         <li><a href="/examples/dpwch-cg" target="_blank">大牌玩唱会 - 曹格</a></li>
         <li><a href="/examples/miniqsmy" target="_blank">mini秦时明月</a></li>
       </ul>
