--- a/examples/dpwch-cg/index.html
+++ b/examples/dpwch-cg/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="erictian">
     <meta name="description" content="Grace欲跟曹格上YY，寂寞先生给你好看">
     <title>Grace欲跟曹格上YY，寂寞先生给你好看</title>
-    <style>@-webkit-keyframes arrow{0%,30%{opacity:0;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:0;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}@keyframes arrow{0%,30%{opacity:0;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:0;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}@-webkit-keyframes fadeInDown{0%{opacity:0;-webkit-transform:translate3d(0,-50%,0);transform:translate3d(0,-50%,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInDown{0%{opacity:0;-webkit-transform:translate3d(0,-50%,0);transform:translate3d(0,-50%,0)}to{opacity:1;-webkit-transform:none;transform:none}}*{box-sizing:border-box;outline:0}body,html{margin:0;padding:0;width:100%;height:100%;font-size:62.5%;text-align:center}.animated{-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}.fadeInDown{-webkit-animation-name:fadeInDown;animation-name:fadeInDown}.container{position:absolute;top:0;left:0;right:0;bottom:0;overflow:hidden}.page-wrap{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.page-wrap:after{display:block;content:' ';height:0;clear:both}.page-wrap.anim{transition:all 500ms ease-out 0s}.page,.page .title{background-repeat:no-repeat;background-position:50% 100%}.page{position:relative;display:block;overflow:hidden;background-size:100%}.page.cur .title{opacity:1}.page .title{margin-top:5%;background-size:auto 100%;opacity:0}.page .arrow{position:absolute;left:50%;bottom:30px;margin-left:-10px;margin-top:-34px;width:19px;height:12px;background:url(images/arrow.png) no-repeat 50% 100%;background-size:auto 100%!important;-webkit-animation:arrow 1.5s infinite ease-in-out;animation:arrow 1.5s infinite ease-in-out}.first{background-image:url(images/bg_1.jpg)}.first .title{height:155.5px;background-image:url(images/title_1.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.first .title{height:120px}}.second{background-image:url(images/bg_2.jpg)}.second .title{height:171px;background-image:url(images/title_2.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.second .title{height:140px}}.third{background-image:url(images/bg_3.jpg)}.third .title{height:179.5px;background-image:url(images/title_3.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.third .title{height:145px}}.fourth{background-image:url(images/bg_4.jpg)}.fourth .title{height:132px;background-image:url(images/title_4.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.fourth .title{height:100px}}.fifth{background-image:url(images/bg_5.jpg)}.fifth .title{height:204px;background-image:url(images/title_5.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.fifth .title{height:150px}}.fifth .lnk-advance{position:absolute;top:38%;left:10%;display:block;width:80px;height:97px;background:url(images/advance.png) no-repeat 50% 100%;background-size:auto 100%!important}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.fifth .lnk-advance{top:34%}}</style>
+    <style>@-webkit-keyframes arrow{0%,30%{opacity:0;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:0;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}@keyframes arrow{0%,30%{opacity:0;-webkit-transform:translate(0,10px);transform:translate(0,10px)}60%{opacity:1;-webkit-transform:translate(0,0);transform:translate(0,0)}to{opacity:0;-webkit-transform:translate(0,-5px);transform:translate(0,-5px)}}@-webkit-keyframes fadeInDown{0%{opacity:0;-webkit-transform:translate3d(0,-50%,0);transform:translate3d(0,-50%,0)}to{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInDown{0%{opacity:0;-webkit-transform:translate3d(0,-50%,0);transform:translate3d(0,-50%,0)}to{opacity:1;-webkit-transform:none;transform:none}}*{box-sizing:border-box;outline:0}body,html{margin:0;padding:0;width:100%;height:100%;font-size:62.5%;text-align:center}.animated{-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}.fadeInDown{-webkit-animation-name:fadeInDown;animation-name:fadeInDown}.container{position:absolute;top:0;left:0;right:0;bottom:0;overflow:hidden}.page-wrap{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.page-wrap:after{display:block;content:' ';height:0;clear:both}.page-wrap.anim{transition:all 500ms ease-out 0s}.page,.page .title{background-repeat:no-repeat;background-position:50% 100%}.page{position:relative;display:block;overflow:hidden;background-size:100%}.page.cur .title{opacity:1}.page .title{margin-top:5%;background-size:auto 100%;opacity:0}.page .arrow{position:absolute;left:50%;bottom:30px;margin-left:-10px;margin-top:-34px;width:19px;height:12px;background:url(images/arrow.png) no-repeat 50% 100%;background-size:auto 100%!important;-webkit-animation:arrow 1.5s infinite ease-in-out;animation:arrow 1.5s infinite ease-in-out}.first{background-image:url(images/bg_1.jpg)}.first .title{height:155.5px;background-image:url(images/title_1.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.first .title{height:120px}}.second{background-image:url(images/bg_2.jpg)}.second .title{height:171px;background-image:url(images/title_2.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.second .title{height:140px}}.third{background-image:url(images/bg_3.jpg)}.third .title{height:179.5px;background-image:url(images/title_3.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.third .title{height:145px}}.fourth{background-image:url(images/bg_4.jpg)}.fourth .title{height:108px;background-image:url(images/title_4.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.fourth .title{height:75px}}.fifth{background-image:url(images/bg_5.jpg)}.fifth .title{height:204px;background-image:url(images/title_5.png)}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.fifth .title{height:150px}}.fifth .lnk-advance{position:absolute;top:38%;left:10%;display:block;width:80px;height:97px;background:url(images/advance.png) no-repeat 50% 100%;background-size:auto 100%!important}@media (max-device-width:320px) and (-webkit-max-device-pixel-ratio:2){.fifth .lnk-advance{top:34%}}.music{position:absolute;right:0;top:0;z-index:99999;width:48px;height:48px}.music>span{position:absolute;left:50%;top:50%;width:2px;height:24px;margin:-12px 0 0 -1px;border-radius:2px;background-color:#fff;-webkit-transform:rotate(-45deg);transform:rotate(-45deg)}.music.playing>span{visibility:hidden}</style>
 </head>
 <body>
     <div class="container">
@@ -33,17 +33,44 @@
                 <a class="lnk-advance" href="http://fun.yy.com/html/publish/1604/325853488503.html"></a>
             </section>
         </div>
+        <div id="music" class="music ne playing">
+            <svg fill="#fff" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 64 64">
+                <path d="M32.01 15.02c-9.39 0-17 7.61-17 17 0 9.388 7.61 17 17 17s17-7.612 17-17c0-9.39-7.612-17-17-17zm0 32c-8.285 0-15-6.716-15-15 0-8.284 6.715-15 15-15 8.283 0 15 6.716 15 15 0 8.284-6.717 15-15 15zm7.144-24.97c-.052-.007-.1-.03-.154-.03-.147 0-.284.035-.41.092l-9.677 1.88c-.082.016-.152.058-.227.092-.046.015-.09.032-.132.053-.017.01-.032.02-.048.033-.226.132-.388.344-.456.604-.004.012-.004.024-.007.036-.016.07-.043.135-.043.21v9.142c-1.057-.296-2.376-.125-3.584.58-2.02 1.182-2.95 3.384-2.074 4.917.875 1.534 3.223 1.82 5.242.64 1.646-.963 2.548-2.598 2.36-4.002.026-.09.056-.18.056-.28V25.815l8-1.554v7.902c-1.057-.296-2.376-.125-3.584.58-2.02 1.182-2.95 3.384-2.074 4.917.875 1.534 3.223 1.82 5.242.64 1.646-.963 2.548-2.598 2.36-4.002.026-.09.056-.18.056-.28v-11c0-.018-.01-.035-.01-.054 0-.037.014-.073.01-.11-.04-.467-.4-.78-.846-.803zM26.528 38.448c-1.01.59-2.065.654-2.357.143-.29-.512.292-1.405 1.303-1.996 1.01-.59 2.065-.654 2.356-.143.29.514-.292 1.406-1.302 1.997zm10-2c-1.01.59-2.065.654-2.357.143-.29-.512.292-1.405 1.303-1.996 1.01-.59 2.065-.654 2.356-.143.29.514-.292 1.406-1.302 1.997z"></path>
+            </svg>
+            <span style="background-color:#fff"></span>
+        </div>
     </div>
+    <audio id="audio_bgm" src="" loop style="display:none"></audio>
     <script src="js/app.js"></script>
     <script src="//res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script src="http://www.ttthing.com/cgi/yy_game/ticket/?url=http://www.ttthing.com/weixin/yy_caoge/"></script>
     <script>
-        $('#page_wrap').fullpage({
-            afterChange: function (e) {
-                var $title = $('.title');
-                $title.eq(e.prev).removeClass('fadeInDown');
-                $title.eq(e.cur).addClass('fadeInDown');
-            }
+        $(function () {
+            var audio_bgm = document.getElementById('audio_bgm');
+            audio_bgm.src = 'bgm.mp3';
+            audio_bgm.play();
+            $(document).on('touchstart', function() {
+                $(document).off('touchstart');
+                audio_bgm.play();
+            });
+
+            $('#page_wrap').fullpage({
+                afterChange: function (e) {
+                    var $title = $('.title');
+                    $title.eq(e.prev).removeClass('fadeInDown');
+                    $title.eq(e.cur).addClass('fadeInDown');
+                }
+            });
+            $('#audio_bgm').on('play', function() {
+                $('#music').addClass('playing')
+            }); 
+            $('#audio_bgm').on('pause', function() {
+                $('#music').removeClass('playing')
+            }); 
+            $('#music').on('click', function(a) {
+                var $this = $(this);
+                $this.hasClass('playing') ? audio_bgm.pause() : audio_bgm.play();
+            });
         });
 
         // 分享参数
@@ -51,7 +78,7 @@
             title: 'Grace欲跟曹格上YY，寂寞先生给你好看',
             desc: '一个等待了十年的约会 5月8日 晚八点 就等你来！',
             link: location.href,
-            imgUrl: 'http://www.ttthing.com/weixin/yy_caoge/images/thumbnail.png',
+            imgUrl: 'http://www.ttthing.com/weixin/yy_caoge/images/thumbnail.jpg',
             success: function() {}
         };
 
@@ -78,6 +105,15 @@
             });
         }
         initShare();
+    </script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement('script');
+          hm.src = '//hm.baidu.com/hm.js?ac3ba867f50ba5c913a3408d52522730';
+          var s = document.getElementsByTagName('script')[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
     </script>
 </body>
 </html>
