--- a/examples/dpwch-wzx/index.html
+++ b/examples/dpwch-wzx/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="erictian">
     <meta name="description" content="污妖王吴宗宪驾临YY直播">
     <title>污妖王吴宗宪驾临YY直播</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
     <div id="loading_mask" class="loading-mask animated">
