--- a/examples/dpwch-wzx/index.html
+++ b/examples/dpwch-wzx/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="fullpage">
             <section class="page page-4 bg-size-h">
-                <div class="person pos-abs bg-size-h animated bounceIn"></div>
+                <div class="person pos-abs bg-size-h"></div>
                 <div class="content pos-abs">
                     <div class="title bg-size-v animated fadeInDown"></div>
                     <div id="video_wrap" class="video-wrap">
