修改分享文案

--- a/examples/dpwch-wzx/index.html
+++ b/examples/dpwch-wzx/index.html
@@ -136,8 +136,8 @@
 
             // 分享参数
             var SHARE_OBJ = {
-                title: '讲真，我们都欠吴宗宪一次点赞',
-                desc: '污妖王只有一个！综艺一哥吴宗宪',
+                title: '膜拜真污妖王吴宗宪  我们都欠你一次掌声',
+                desc: '小薛、老费靠边站！吴宗宪才是真·老司机段子手，正牌污妖王驾临YY直播啦！',
                 link: location.href,
                 imgUrl: 'http://www.ttthing.com/weixin/yy_wuzongxian/images/thumbnail.jpg'
             };
